--- a/package.json
+++ b/package.json
@@ -42,13 +42,13 @@
     "@babel/preset-typescript": "^7.14.5",
     "@babel/runtime": "^7.14.6",
     "@storybook/addon-actions": "^6.5.12",
-    "@storybook/addon-essentials": "^6.5.12",
+    "@storybook/addon-essentials": "^7.3.1",
     "@storybook/addon-interactions": "^6.5.12",
     "@storybook/addon-links": "^6.5.12",
     "@storybook/addon-postcss": "^2.0.0",
     "@storybook/builder-webpack5": "^6.5.12",
     "@storybook/manager-webpack5": "^6.5.12",
-    "@storybook/react": "^6.5.12",
+    "@storybook/react": "^7.3.1",
     "@storybook/testing-library": "^0.0.13",
     "@types/classnames": "^2.2.10",
     "@types/jest": "^26.0.24",
@@ -84,7 +84,7 @@
     "terser-webpack-plugin": "^5.1.3",
     "typescript": "^4.3.4",
     "url-loader": "^4.1.1",
-    "webpack": "5.73",
+    "webpack": "^5.88.2",
     "webpack-bundle-analyzer": "^4.4.2",
     "webpack-cli": "4.10",
     "webpack-dev-server": "^4.9.3"
